--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,82 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+
+//TODO: Add custom font
+//$custom-typography: mat-typography-config($font-family: 'Libre Franklin');
+//@include mat.core($custom-typography);
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+
+/* For use in src/lib/core/theming/_palette.scss */
+$custom-sage: (
+    50 : #f0f1ee,
+    100 : #d9ddd4,
+    200 : #c0c7b8,
+    300 : #a6b09b,
+    400 : #939f85,
+    500 : #808e70,
+    600 : #788668,
+    700 : #6d7b5d,
+    800 : #637153,
+    900 : #505f41,
+    A100 : #dcffb9,
+    A200 : #c3ff86,
+    A400 : #a9ff53,
+    A700 : #9cff3a,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+
+
+
+$angular-with-firebase-primary: mat.define-palette($custom-sage);
+$angular-with-firebase-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$angular-with-firebase-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$angular-with-firebase-theme: mat.define-dark-theme((
+  color: (
+    primary: $angular-with-firebase-primary,
+    accent: $angular-with-firebase-accent,
+    warn: $angular-with-firebase-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($angular-with-firebase-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
